Vendor `raw` chart into repo
Part of https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1982

In order to allow us to eventually drop `helm-git`, as well as remove
external depedencies and help readability, we are moving external charts
to be vendored in repo.

As the raw chart is currently being hosted on the incubator repository
that is locked (no more changes), we can easily move this in repo completely
(no need to track it upstream using `git subtree`, as it will never change).

--- a/releases/gitlab-extras/helmfile.yaml
+++ b/releases/gitlab-extras/helmfile.yaml
@@ -5,14 +5,9 @@ bases:
 
 ---
 {{ $namespace := .Values | getOrNil "gitlab_extras.namespace" | default "gitlab" }}
-repositories:
-- name: "kubernetes-incubator"
-  url: "https://charts.helm.sh/incubator"
-
 releases:
 - name:  {{ .Values | getOrNil "gitlab_extras.release_name" | default "gitlab-extras" }}
-  chart: "kubernetes-incubator/raw"
+  chart: "../../charts/raw"
   namespace: {{ $namespace }}
-  version: "0.2.3"
   values:
     - values.yaml.gotmpl
