Fix QA not running during chart bumps
* CHART_VERSION used to be a file, it's now a variable - with this it no
  longer serves its purpose in our configuration, let's remove it
* We now trigger a QA run for every change made to our CI configuration
  * Since this is where we manage the chart version, this should be a
    okay change

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -539,7 +539,7 @@ pre:qa:
       - $EXPEDITE_DEPLOYMENT
   only:
     changes:
-      - 'CHART_VERSION'
+      - '.gitlab-ci.yml'
       - '*.yaml'
       - 'releases/gitlab-secrets/*'
       - 'releases/gitlab/helmfile.yaml'
@@ -560,7 +560,7 @@ gstg:qa:
       - $EXPEDITE_DEPLOYMENT
   only:
     changes:
-      - 'CHART_VERSION'
+      - '.gitlab-ci.yml'
       - '*.yaml'
       - 'releases/gitlab-secrets/*'
       - 'releases/gitlab/helmfile.yaml'
