add registry-postgresql-password-v1 secret to gstg

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -155,8 +155,8 @@ releases:
           gcs.json: |
 {{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
 
-# only add this secret to pre environment for the moment:
-{{ if eq (.Environment.Values | getOrNil "env_prefix") "pre" }}
+# only add this secret to pre and gstg environment for the moment:
+{{ if or (eq (.Environment.Values | getOrNil "env_prefix") "pre") (eq (.Environment.Values | getOrNil "env_prefix") "gstg") }}
       - apiVersion: v1
         kind: Secret
         metadata:
