Customize registry presigned download URL expiry delay (pre)

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -154,6 +154,24 @@ releases:
               enabled: true
           gcs.json: |
 {{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
+      # Required to gradually rollout the new presigned download URL config (`storage.redirect.expirydelay`).
+      # Remove registry-storage-v3 once applied to all envs.
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: registry-storage-v4
+          namespace: {{ $namespace }}
+        stringData:
+          config: |
+            gcs:
+              bucket: {{ .Environment.Values | getOrNil "registry_bucket_name" | default (printf "gitlab-%s-registry" $env_prefix) }}
+              keyfile: /etc/docker/registry/storage/gcs.json
+            delete:
+              enabled: true
+            redirect:
+              expirydelay: 15m
+          gcs.json: |
+{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
 
 # only add this secret to pre and gstg environment for the moment:
 {{ if or (eq (.Environment.Values | getOrNil "env_prefix") "pre") (eq (.Environment.Values | getOrNil "env_prefix") "gstg") }}
