--- a/charts/gitlab/pre/charts/gitlab/charts/gitlab-pages/templates/configmap.yml
+++ b/charts/gitlab/pre/charts/gitlab/charts/gitlab-pages/templates/configmap.yml
@@ -43,7 +43,7 @@ data:
     listen-http=0.0.0.0:{{ .Values.service.internalPort }}
       {{- end }}
       {{- if not (empty $.Values.global.pages.externalHttps) }}
-    listen-https=0.0.0.0:{{ .Values.service.customDomains.internalHttpsPort }}
+    listen-https{{ if .Values.useProxyV2 }}-proxyv2{{ end }}=0.0.0.0:{{ .Values.service.customDomains.internalHttpsPort | int }}
     root-cert=/etc/gitlab-secrets/pages/{{ template "gitlab.pages.hostname" $ }}.crt
     root-key=/etc/gitlab-secrets/pages/{{ template "gitlab.pages.hostname" $ }}.key
       {{- end }}
