--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -554,6 +554,7 @@ pre:qa:
       - $EXPEDITE_DEPLOYMENT
   only:
     changes:
+      - 'charts/gitlab/**'
       - '.gitlab-ci.yml'
       - '*.yaml'
       - 'releases/gitlab-secrets/*'
@@ -575,6 +576,7 @@ gstg:qa:
       - $EXPEDITE_DEPLOYMENT
   only:
     changes:
+      - 'charts/gitlab/**'
       - '.gitlab-ci.yml'
       - '*.yaml'
       - 'releases/gitlab-secrets/*'
