--- a/charts/gitlab/pre/Gemfile
+++ b/charts/gitlab/pre/Gemfile
@@ -1,15 +1,18 @@
 source 'https://rubygems.org'
 
-gem 'rspec'
-gem 'rspec-retry'
-gem 'rspec-parameterized', require: false
-gem 'aws-sdk-s3'
-gem 'capybara'
-gem 'selenium-webdriver'
-gem 'capybara-screenshot'
-gem 'docker-api'
-gem 'rake'
-gem 'hash-deep-merge'
+group :test do
+  gem 'rspec'
+  gem 'rspec-retry'
+  gem 'rspec-parameterized', require: false
+  gem 'aws-sdk-s3'
+  gem 'capybara'
+  gem 'selenium-webdriver'
+  gem 'capybara-screenshot'
+  gem 'docker-api'
+  gem 'rake'
+  gem 'hash-deep-merge'
+  gem 'knapsack'
+end
 
 group :rubocop do
   gem 'gitlab-styles', '~> 6.1', require: false
