--- a/charts/gitlab/gprd/.gitlab-ci.yml
+++ b/charts/gitlab/gprd/.gitlab-ci.yml
@@ -198,11 +198,11 @@ review_gke:
     DNS_PROVIDER: "google"
   extends: .review_template
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_gke
     auto_stop_in: 4 days
-  resource_group: "gke-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}"
+  resource_group: "gke-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}"
 
 review_gke_dev:
   variables:
@@ -210,11 +210,11 @@ review_gke_dev:
     HELM_EXTRA_ARGS: "-f scripts/ci/values-dev-images.yaml"
   extends: .review_template
   environment:
-    name: dev_gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: dev_gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_gke_dev
     auto_stop_in: 4 days
-  resource_group: "gke-review-app-dev-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}"
+  resource_group: "gke-review-app-dev-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}"
   only:
     refs:
       - /.*-stable/@gitlab/charts/gitlab
@@ -226,11 +226,11 @@ review_eks:
     DNS_PROVIDER: "aws"
   extends: .review_template
   environment:
-    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_eks
     auto_stop_in: 4 days
-  resource_group: "eks-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}"
+  resource_group: "eks-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}"
 
 .stop_review_template:
   stage: review
@@ -261,13 +261,13 @@ review_eks:
 stop_review_gke:
   extends: .stop_review_template
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     action: stop
 
 stop_review_gke_dev:
   extends: .stop_review_template
   environment:
-    name: dev_gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: dev_gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     action: stop
   only:
     refs:
@@ -278,7 +278,7 @@ stop_review_gke_dev:
 stop_review_eks:
   extends: .stop_review_template
   environment:
-    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     action: stop
 
 # Keys that start with a dot (.) will not be processed by GitLab CI.
@@ -368,7 +368,7 @@ stable_eks:
 review_helm_test:
   stage: qa
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_gke
   script:
@@ -411,7 +411,7 @@ debug_review:
     paths:
     - variables
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_gke
   variables:
@@ -544,8 +544,8 @@ review-docs-deploy:
   extends:
   - .review-docs
   environment:
-    name: review-docs/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
-    url: http://${DOCS_BRANCH}-${DOCS_GITLAB_REPO_SUFFIX}-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}.${DOCS_REVIEW_APPS_DOMAIN}/${DOCS_GITLAB_REPO_SUFFIX}
+    name: review-docs/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
+    url: http://${DOCS_BRANCH}-${DOCS_GITLAB_REPO_SUFFIX}-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}.${DOCS_REVIEW_APPS_DOMAIN}/${DOCS_GITLAB_REPO_SUFFIX}
     on_stop: review-docs-cleanup
   script:
   - ./trigger-build docs deploy
@@ -555,7 +555,7 @@ review-docs-cleanup:
   extends:
   - .review-docs
   environment:
-    name: review-docs/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: review-docs/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     action: stop
   script:
   - ./trigger-build docs cleanup
@@ -575,10 +575,7 @@ review-docs-cleanup:
     S3_CONFIG_PATH: /etc/gitlab/minio
   script:
     - ./scripts/ci/install_spec_dependencies
-    - if [[ -n "${VARIABLES_FILE}" ]]; then source "${VARIABLES_FILE}"; ./scripts/ci/feature_spec_setup; else ./scripts/ci/integration_spec_setup; fi
-    - bundle config set path 'gems'
-    - bundle install -j $(nproc)
-    - bundle exec rspec -c -f d spec -t "${RSPEC_TAGS}"
+    - ./scripts/ci/run_specs
   artifacts:
     when: on_failure
     expire_in: 7d
@@ -596,10 +593,10 @@ review_specs_gke:
     VARIABLES_FILE: "variables/review_gke"
     RSPEC_TAGS: type:feature
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_gke
-  resource_group: "gke-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}"
+  resource_group: "gke-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}"
   only:
     refs:
       - branches
@@ -618,10 +615,10 @@ review_specs_gke:
 #     VARIABLES_FILE: "variables/review_gke_dev"
 #     RSPEC_TAGS: type:feature
 #   environment:
-#     name: dev_gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+#     name: dev_gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
 #     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
 #     on_stop: stop_review_gke_dev
-#   resource_group: "gke-review-app-dev-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}"
+#   resource_group: "gke-review-app-dev-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}"
 #   only:
 #     refs:
 #       - /.*-stable/@gitlab/charts/gitlab
@@ -634,10 +631,10 @@ review_specs_eks:
     VARIABLES_FILE: "variables/review_eks"
     RSPEC_TAGS: type:feature
   environment:
-    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     url: https://gitlab-$CI_ENVIRONMENT_SLUG.$KUBE_INGRESS_BASE_DOMAIN
     on_stop: stop_review_eks
-  resource_group: "eks-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_NAME}"
+  resource_group: "eks-review-app-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}"
   only:
     refs:
       - branches
@@ -654,6 +651,7 @@ specs_without_cluster:
   variables:
     RSPEC_TAGS: ~type:feature
   needs: []
+  parallel: 5
   except:
     refs:
       - /(^docs[\/-].+|.+-docs$)/
@@ -671,6 +669,7 @@ production_specs_without_cluster:
   extends: .production_specs
   variables:
     RSPEC_TAGS: ~type:feature
+  parallel: 5
   except:
     refs:
       - /(^docs[\/-].+|.+-docs$)/
@@ -816,7 +815,7 @@ qa_gke:
     VARIABLES_FILE: "variables/review_gke"
     TEST_SUITE: '--tag smoke --tag reliable'
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     on_stop: stop_review_gke
 
 qa_eks:
@@ -825,7 +824,7 @@ qa_eks:
     VARIABLES_FILE: "variables/review_eks"
     TEST_SUITE: '--tag smoke --tag reliable'
   environment:
-    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     on_stop: stop_review_eks
 
 qa_gke_production:
@@ -834,7 +833,7 @@ qa_gke_production:
     VARIABLES_FILE: "variables/stable_gke"
     TEST_SUITE: '--tag smoke --tag reliable'
   environment:
-    name: gke_production/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_production/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
 
 qa_eks_production:
   extends: .qa_production
@@ -842,7 +841,7 @@ qa_eks_production:
     VARIABLES_FILE: "variables/stable_eks"
     TEST_SUITE: '--tag smoke --tag reliable'
   environment:
-    name: eks_production/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: eks_production/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
 
 # QA jobs for Full E2E suites
 
@@ -853,7 +852,7 @@ qa_gke_manual_full_suite:
     VARIABLES_FILE: "variables/review_gke"
     TEST_SUITE: '--tag ~smoke --tag ~reliable --tag ~orchestrated --tag ~transient'
   environment:
-    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: gke_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     on_stop: stop_review_gke
   when: manual
 
@@ -864,7 +863,7 @@ qa_eks_manual_full_suite:
     VARIABLES_FILE: "variables/review_eks"
     TEST_SUITE: '--tag ~smoke --tag ~reliable --tag ~orchestrated --tag ~transient'
   environment:
-    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_NAME
+    name: eks_review/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     on_stop: stop_review_eks
   when: manual
 
