Correct syntax for detecting chart changes and kicking of QA jobs
Part of https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/2031

Looking at the docs for the `changes` keyword at

https://docs.gitlab.com/ee/ci/yaml/#onlychanges--exceptchanges

We see that to recursively detect files we need to use the syntax

`charts/gitlab/**/*`

Otherwise I suspect it's only picking up changes in `charts/gitlab`
(which only contains folders that don't change).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,7 +133,7 @@ variables:
     variables:
       - $AUTO_DEPLOY == "false"
     changes:
-      - 'charts/gitlab/**'
+      - 'charts/gitlab/**/*'
       - 'bases/**/*'
       - 'bin/**/*'
       - 'releases/**/*'
@@ -554,7 +554,7 @@ pre:qa:
       - $EXPEDITE_DEPLOYMENT
   only:
     changes:
-      - 'charts/gitlab/**'
+      - 'charts/gitlab/**/*'
       - '.gitlab-ci.yml'
       - '*.yaml'
       - 'releases/gitlab-secrets/*'
@@ -576,7 +576,7 @@ gstg:qa:
       - $EXPEDITE_DEPLOYMENT
   only:
     changes:
-      - 'charts/gitlab/**'
+      - 'charts/gitlab/**/*'
       - '.gitlab-ci.yml'
       - '*.yaml'
       - 'releases/gitlab-secrets/*'
