--- a/charts/gitlab/pre/charts/gitlab/charts/gitlab-shell/values.yaml
+++ b/charts/gitlab/pre/charts/gitlab/charts/gitlab-shell/values.yaml
@@ -125,4 +125,4 @@ networkpolicy:
 
 ## Allow to select ssh daemon that would be executed inside container
 ## Possible values: openssh, gitlab-sshd
-sshDaemon: openssh
+sshDaemon: gitlab-sshd
