--- a/charts/gitlab/pre/charts/gitlab/charts/gitlab-shell/templates/service.yaml
+++ b/charts/gitlab/pre/charts/gitlab/charts/gitlab-shell/templates/service.yaml
@@ -13,6 +13,10 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
+    - port: 9122
+      targetPort: 9122
+      protocol: TCP
+      name: metrics
     - port: {{ include "gitlab.shell.port" . | int }}
       targetPort: {{ .Values.service.internalPort }}
       protocol: TCP
