--- a/charts/gitlab/gstg/charts/nginx-ingress/templates/controller-configmap.yaml
+++ b/charts/gitlab/gstg/charts/nginx-ingress/templates/controller-configmap.yaml
@@ -1,4 +1,3 @@
-{{/* GitLab labels included below */}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,19 +11,13 @@ metadata:
   annotations: {{ toYaml .Values.controller.configAnnotations | nindent 4 }}
 {{- end }}
   name: {{ include "ingress-nginx.controller.fullname" . }}
-  namespace: {{ .Release.Namespace }}
 data:
-  allow-snippet-annotations: "{{ .Values.controller.allowSnippetAnnotations }}"
 {{- if .Values.controller.addHeaders }}
   add-headers: {{ .Release.Namespace }}/{{ include "ingress-nginx.fullname" . }}-custom-add-headers
 {{- end }}
 {{- if or .Values.controller.proxySetHeaders .Values.controller.headers }}
   proxy-set-headers: {{ .Release.Namespace }}/{{ include "ingress-nginx.fullname" . }}-custom-proxy-headers
 {{- end }}
-{{- if .Values.dhParam }}
-  ssl-dh-param: {{ printf "%s/%s" .Release.Namespace (include "ingress-nginx.controller.fullname" .) }}
+{{- if .Values.controller.config }}
+  {{ toYaml .Values.controller.config | nindent 2 }}
 {{- end }}
-{{- range $key, $value := .Values.controller.config }}
-    {{ $key | nindent 2 }}: {{ $value | quote }}
-{{- end }}
-
