--- a/charts/gitlab/gstg/charts/minio/templates/ingress.yaml
+++ b/charts/gitlab/gstg/charts/minio/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
 {{- include "gitlab.standardLabels" . | nindent 4 }}
 {{- include "gitlab.commonLabels" . | nindent 4 }}
   annotations:
-    {{ include "gitlab.ingress.classAnnotation" . }}
+    kubernetes.io/ingress.class: "{{ template "minio.ingressclass" . }}"
     kubernetes.io/ingress.provider: "{{ template "gitlab.ingress.provider" $ingressCfg }}"
     {{- if eq "nginx" .Values.global.ingress.provider }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingress.proxyBodySize | quote }}
@@ -26,13 +26,12 @@ metadata:
     {{ $key }}: {{ $value | quote }}
   {{- end }}
 spec:
-  {{ template "gitlab.ingress.classnameField" $ }}
   rules:
     - host: {{ $minioHostname }}
       http:
         paths:
           - path: {{ coalesce $.Values.ingress.path $.Values.global.ingress.path }}
-            {{ if or ($.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress") (eq $.Values.global.ingress.apiVersion "networking.k8s.io/v1") -}}
+            {{ if $.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
             pathType: {{ default "Prefix" $.Values.global.ingress.pathType }}
             backend:
               service:
