--- a/charts/gitlab/gstg/charts/nginx-ingress/templates/admission-webhooks/validating-webhook.yaml
+++ b/charts/gitlab/gstg/charts/nginx-ingress/templates/admission-webhooks/validating-webhook.yaml
@@ -18,7 +18,7 @@ webhooks:
       - apiGroups:
           - networking.k8s.io
         apiVersions:
-          - v1
+          - v1beta1
         operations:
           - CREATE
           - UPDATE
@@ -28,11 +28,12 @@ webhooks:
     sideEffects: None
     admissionReviewVersions:
       - v1
+      - v1beta1
     clientConfig:
       service:
-        namespace: {{ .Release.Namespace | quote }}
+        namespace: {{ .Release.Namespace }}
         name: {{ include "ingress-nginx.controller.fullname" . }}-admission
-        path: /networking/v1/ingresses
+        path: /networking/v1beta1/ingresses
     {{- if .Values.controller.admissionWebhooks.timeoutSeconds }}
     timeoutSeconds: {{ .Values.controller.admissionWebhooks.timeoutSeconds }}
     {{- end }}
