--- a/charts/gitlab/gstg/charts/nginx-ingress/templates/controller-configmap-tcp.yaml
+++ b/charts/gitlab/gstg/charts/nginx-ingress/templates/controller-configmap-tcp.yaml
@@ -1,4 +1,3 @@
-{{/* GitLab labels included below */}}
 {{- if and .Values.tcp (not .Values.tcpExternalConfig) -}}
 apiVersion: v1
 kind: ConfigMap
@@ -13,6 +12,6 @@ metadata:
   annotations: {{ toYaml .Values.controller.tcp.annotations | nindent 4 }}
 {{- end }}
   name: {{ template "ingress-nginx.tcp-configmap" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ $.Release.Namespace }}
 data: {{ tpl (toYaml .Values.tcp) . | nindent 2 }}
 {{- end }}
