--- a/charts/gitlab/gstg/charts/nginx-ingress/templates/controller-service.yaml
+++ b/charts/gitlab/gstg/charts/nginx-ingress/templates/controller-service.yaml
@@ -16,7 +16,6 @@ metadata:
     {{- toYaml .Values.controller.service.labels | nindent 4 }}
   {{- end }}
   name: {{ include "ingress-nginx.controller.fullname" . }}
-  namespace: {{ .Release.Namespace }}
 spec:
   type: {{ .Values.controller.service.type }}
 {{- if .Values.controller.service.clusterIP }}
@@ -25,8 +24,8 @@ spec:
 {{- if .Values.controller.service.externalIPs }}
   externalIPs: {{ toYaml .Values.controller.service.externalIPs | nindent 4 }}
 {{- end }}
-{{- if or .Values.global.hosts.externalIP .Values.controller.service.loadBalancerIP }}
-  loadBalancerIP: {{ coalesce .Values.global.hosts.externalIP .Values.controller.service.loadBalancerIP }}
+{{- if .Values.global.hosts.externalIP }}
+  loadBalancerIP: {{ .Values.global.hosts.externalIP }}
 {{- end }}
 {{- if .Values.controller.service.loadBalancerSourceRanges }}
   loadBalancerSourceRanges: {{ toYaml .Values.controller.service.loadBalancerSourceRanges | nindent 4 }}
@@ -40,16 +39,6 @@ spec:
 {{- if .Values.controller.service.healthCheckNodePort }}
   healthCheckNodePort: {{ .Values.controller.service.healthCheckNodePort }}
 {{- end }}
-{{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
-{{- if .Values.controller.service.ipFamilyPolicy }}
-  ipFamilyPolicy: {{ .Values.controller.service.ipFamilyPolicy }}
-{{- end }}
-{{- end }}
-{{- if semverCompare ">=1.20.0-0" .Capabilities.KubeVersion.Version -}}
-{{- if .Values.controller.service.ipFamilies }}
-  ipFamilies: {{ toYaml .Values.controller.service.ipFamilies | nindent 4 }}
-{{- end }}
-{{- end }}
   ports:
   {{- $setNodePorts := (or (eq .Values.controller.service.type "NodePort") (eq .Values.controller.service.type "LoadBalancer")) }}
   {{- if .Values.controller.service.enableHttp }}
@@ -57,9 +46,6 @@ spec:
       port: {{ .Values.controller.service.ports.http }}
       protocol: TCP
       targetPort: {{ .Values.controller.service.targetPorts.http }}
-    {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
-      appProtocol: http
-    {{- end }}
     {{- if (and $setNodePorts (not (empty .Values.controller.service.nodePorts.http))) }}
       nodePort: {{ .Values.controller.service.nodePorts.http }}
     {{- end }}
@@ -69,14 +55,10 @@ spec:
       port: {{ .Values.controller.service.ports.https }}
       protocol: TCP
       targetPort: {{ .Values.controller.service.targetPorts.https }}
-    {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
-      appProtocol: https
-    {{- end }}
     {{- if (and $setNodePorts (not (empty .Values.controller.service.nodePorts.https))) }}
       nodePort: {{ .Values.controller.service.nodePorts.https }}
     {{- end }}
   {{- end }}
-  {{- if include "gitlab.shell.port" $ }}
     - name: gitlab-shell
       port: {{ include "gitlab.shell.port" $ | int }}
       protocol: TCP
@@ -85,7 +67,6 @@ spec:
       {{- if (and (eq .Values.controller.service.type "NodePort") (not (empty $nodePort))) }}
       nodePort: {{ $nodePort }}
       {{- end }}
-  {{- end }}
   {{- range $key, $value := .Values.tcp }}
     - name: {{ $key }}-tcp
       port: {{ $key }}
