--- a/charts/gitlab/pre/.gitlab-ci.yml
+++ b/charts/gitlab/pre/.gitlab-ci.yml
@@ -804,6 +804,8 @@ publish_devel_package:
     CHANNEL: "devel"
     VERSION_SUFFIX: "-${CI_PIPELINE_ID}"
   rules:
+    - if: $DEPS_PIPELINE || $TRIGGER_JOB
+      when: never
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
 
 release_package:
