expand hpa template to support custom metrics
Signed-off-by: Michal Wasilewski <mwasilewski@gitlab.com>

--- a/charts/gitlab/pre/charts/gitlab/charts/kas/templates/hpa.yaml
+++ b/charts/gitlab/pre/charts/gitlab/charts/kas/templates/hpa.yaml
@@ -15,8 +15,11 @@ spec:
   minReplicas: {{ .Values.minReplicas }}
   maxReplicas: {{ .Values.maxReplicas }}
   metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageValue: {{ .Values.hpa.targetAverageValue }}
+  {{- if not .Values.hpa.customMetrics }}
+    - type: Resource
+      resource:
+        name: cpu
+        targetAverageValue: {{ .Values.hpa.targetAverageValue }}
+  {{- else -}}
+    {{- toYaml .Values.hpa.customMetrics | nindent 4 -}}
 {{- end -}}
