--- a/charts/gitlab/gstg/charts/gitlab/charts/webservice/values.yaml
+++ b/charts/gitlab/gstg/charts/gitlab/charts/webservice/values.yaml
@@ -329,6 +329,7 @@ extra: {}
   # matomo_disable_cookies: false
   # one_trust_id: '_your_one_trust_id'
   # google_tag_manager_nonce_id: '_your_google_tag_manager_id'
+  # bizible: false
 rack_attack:
   git_basic_auth:
     enabled: false
