--- a/charts/gitlab/pre/.gitlab-ci.yml
+++ b/charts/gitlab/pre/.gitlab-ci.yml
@@ -544,8 +544,8 @@ check_docs_links:
   # review-docs-cleanup job will not be able to run when the branch gets
   # deleted (when merging the MR).
   - apk add --update openssl
-  - wget https://gitlab.com/gitlab-org/gitlab/-/raw/master/scripts/trigger-build
-  - chmod 755 trigger-build
+  - wget https://gitlab.com/gitlab-org/gitlab/-/raw/master/scripts/trigger-build.rb
+  - chmod 755 trigger-build.rb
   variables:
     GIT_STRATEGY: none
     DOCS_REVIEW_APPS_DOMAIN: 178.62.207.141.nip.io
@@ -574,7 +574,7 @@ review-docs-deploy:
     url: http://${DOCS_BRANCH}-${DOCS_GITLAB_REPO_SUFFIX}-${REVIEW_REF_PREFIX}${CI_COMMIT_REF_SLUG}.${DOCS_REVIEW_APPS_DOMAIN}/${DOCS_GITLAB_REPO_SUFFIX}
     on_stop: review-docs-cleanup
   script:
-  - ./trigger-build docs deploy
+  - ./trigger-build.rb docs deploy
 
 # Cleanup remote environment of gitlab-docs
 review-docs-cleanup:
@@ -584,7 +584,7 @@ review-docs-cleanup:
     name: review-docs/$REVIEW_REF_PREFIX$CI_COMMIT_REF_SLUG
     action: stop
   script:
-  - ./trigger-build docs cleanup
+  - ./trigger-build.rb docs cleanup
 
 # ---------------------------------------------------------------------------
 
@@ -837,9 +837,10 @@ release_package:
         --form "variables[RELEASE_REF]=$CI_COMMIT_REF_NAME"
         --form "variables[UNSTABLE]=$UNSTABLE"
         https://gitlab.com/api/v4/projects/2860651/trigger/pipeline
-  only:
-    - tags@gitlab/charts/gitlab
-  when: manual
+  rules:
+    - if: '$CI_SERVER_HOST == "dev.gitlab.org" && $CI_PROJECT_PATH == "gitlab/charts/gitlab" && $CI_COMMIT_TAG'
+      when: manual
+    - when: never
 
 .qa_branch:
   extends:
