--- a/charts/gitlab/pre/charts/gitlab/charts/geo-logcursor/templates/deployment.yaml
+++ b/charts/gitlab/pre/charts/gitlab/charts/geo-logcursor/templates/deployment.yaml
@@ -35,6 +35,10 @@ spec:
         {{ $key }}: {{ $value | quote }}
       {{- end }}
     spec:
+      {{- if .Values.tolerations }}
+      tolerations:
+        {{- toYaml .Values.tolerations | nindent 8 }}
+      {{- end }}
       securityContext:
         runAsUser: {{ .Values.securityContext.runAsUser }}
         fsGroup: {{ .Values.securityContext.fsGroup }}
