--- a/charts/gitlab/pre/charts/gitlab/charts/kas/Chart.yaml
+++ b/charts/gitlab/pre/charts/gitlab/charts/kas/Chart.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v1
 name: kas
-version: 5.8.0
-appVersion: latest
+version: 5.8.2
+appVersion: master
 description: GitLab Agent Server
 keywords:
 - agent
