--- a/charts/gitlab/pre/charts/gitlab/charts/praefect/values.yaml
+++ b/charts/gitlab/pre/charts/gitlab/charts/praefect/values.yaml
@@ -44,6 +44,8 @@ serviceAccount:
   enabled: false
   create: false
   annotations: {}
+  ## Name to be used for serviceAccount, otherwise defaults to chart fullname
+  # name:
 
 ## Support for tolerations for pod scheduling
 tolerations: []
