--- a/charts/gitlab/pre/deps.yml
+++ b/charts/gitlab/pre/deps.yml
@@ -16,7 +16,7 @@ dependencies:
     gitlab_labels:
       - group::distribution
       - devops::enablement
-      - feature::maintenance
+      - type::maintenance
       - maintenance
       - dependencies.io
     gitlab_remove_source_branch: true
