--- a/charts/gitlab/gstg/charts/gitlab/charts/gitlab-pages/templates/configmap.yml
+++ b/charts/gitlab/gstg/charts/gitlab/charts/gitlab-pages/templates/configmap.yml
@@ -131,5 +131,17 @@ data:
     {{- if .Values.rateLimitDomainBurst }}
     rate-limit-domain-burst={{ .Values.rateLimitDomainBurst }}
     {{- end }}
+    {{- if .Values.rateLimitTLSSourceIP }}
+    rate-limit-tls-source-ip={{ .Values.rateLimitTLSSourceIP }}
+    {{- end }}
+    {{- if .Values.rateLimitTLSSourceIPBurst }}
+    rate-limit-tls-source-ip-burst={{ .Values.rateLimitTLSSourceIPBurst }}
+    {{- end }}
+    {{- if .Values.rateLimitTLSDomain }}
+    rate-limit-tls-domain={{ .Values.rateLimitTLSDomain }}
+    {{- end }}
+    {{- if .Values.rateLimitTLSDomainBurst }}
+    rate-limit-tls-domain-burst={{ .Values.rateLimitTLSDomainBurst }}
+    {{- end }}
   configure: |
     {{- include "gitlab.scripts.configure.secrets" (dict "required" "pages" "optional" "pages") | nindent 4 -}}
