--- a/ci/version-checks.yml
+++ b/ci/version-checks.yml
@@ -9,4 +9,5 @@ assert_consistent_tool_versions:
     variables:
       - $CI_API_V4_URL == "https://ops.gitlab.net/api/v4"
       - $CI_COMMIT_REF_NAME == 'master'
+      - $CI_PIPELINE_SOURCE == "schedule"
   dependencies: []
