--- a/charts/gitlab/gstg/values.yaml
+++ b/charts/gitlab/gstg/values.yaml
@@ -459,6 +459,7 @@ global:
       # appIdKey:
       # appSecretKey:
       # redirectUri:
+      # authScope:
 
   ## https://docs.gitlab.com/charts/advanced/geo/
   geo:
