--- a/charts/gitlab/gstg/charts/gitlab/charts/gitaly/templates/_service_spec.yaml
+++ b/charts/gitlab/gstg/charts/gitlab/charts/gitaly/templates/_service_spec.yaml
@@ -4,7 +4,7 @@ spec:
   ports:
     - port: {{ coalesce .Values.service.externalPort .Values.global.gitaly.service.externalPort }}
       name: {{ coalesce .Values.service.name .Values.global.gitaly.service.name }}
-      targetPort: grcp-gitaly
+      targetPort: grpc-gitaly
    {{- if .Values.global.gitaly.tls.enabled }}
     - port: {{ coalesce .Values.service.tls.externalPort .Values.global.gitaly.service.tls.externalPort }}
       name: {{coalesce  .Values.service.name .Values.global.gitaly.service.name }}-tls
