--- a/charts/gitlab/gprd/values.yaml
+++ b/charts/gitlab/gprd/values.yaml
@@ -109,6 +109,7 @@ global:
     # database: gitlabhq_production
     # applicationName:
     # preparedStatements: false
+    # databaseTasks: true
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-redis-settings
   redis:
@@ -130,7 +131,7 @@ global:
       # key:
     # serviceName:
     internal:
-      names: ['default']
+      names: [default]
     external: []
     service:
       name: gitaly
@@ -155,7 +156,7 @@ global:
         gitalyReplicas: 3
         maxUnavailable: 1
     psql:
-      sslMode: 'disable'
+      sslMode: disable
     # serviceName:
     service:
       name: praefect
@@ -325,6 +326,10 @@ global:
       enabled: false
       bucket: gitlab-terraform-state
       connection: {}
+    ciSecureFiles:
+      enabled: false
+      bucket: gitlab-ci-secure-files
+      connection: {}
     dependencyProxy:
       enabled: false
       proxy_download: true
@@ -415,8 +420,8 @@ global:
       enabled: false
       autoSignInWithProvider:
       syncProfileFromProvider: []
-      syncProfileAttributes: ['email']
-      allowSingleSignOn: ['saml']
+      syncProfileAttributes: [email]
+      allowSingleSignOn: [saml]
       blockAutoCreatedUsers: true
       autoLinkLdapUser: false
       autoLinkSamlUser: false
@@ -454,6 +459,7 @@ global:
       # appIdKey:
       # appSecretKey:
       # redirectUri:
+      # authScope:
 
   ## https://docs.gitlab.com/charts/advanced/geo/
   geo:
@@ -466,17 +472,17 @@ global:
     # PostgreSQL connection details only needed for `secondary`
     psql:
       password: {}
-        # secret:
-        # key:
+      #   secret:
+      #   key:
       # host: postgresql.hostedsomewhere.else
       # port: 123
       # username: gitlab_replicator
       # database: gitlabhq_geo_production
       # ssl:
-        # secret:
-        # clientKey:
-        # clientCertificate:
-        # serverCA:
+      #   secret:
+      #   clientKey:
+      #   clientCertificate:
+      #   serverCA:
     registry:
       replication:
         enabled: false
@@ -489,11 +495,15 @@ global:
     service:
       apiExternalPort: 8153 # port for connections from the GitLab backend
 
+  ## https://docs.gitlab.com/charts/charts/gitlab/spamcheck/
+  spamcheck:
+    enabled: false
+
   ## https://docs.gitlab.com/charts/charts/globals#configure-gitlab-shell
   shell:
     authToken: {}
-      # secret:
-      # key:
+    # secret:
+    # key:
     hostKeys: {}
       # secret:
     ## https://docs.gitlab.com/charts/charts/globals#tcp-proxy-protocol
@@ -593,10 +603,10 @@ global:
   ## https://docs.gitlab.com/charts/installation/deployment#outgoing-email
   ## Email persona used in email sent by GitLab
   email:
-    from: ''
+    from: ""
     display_name: GitLab
-    reply_to: ''
-    subject_suffix: ''
+    reply_to: ""
+    subject_suffix: ""
     smime:
       enabled: false
       secretName: ""
@@ -640,7 +650,11 @@ global:
   certificates:
     image:
       repository: registry.gitlab.com/gitlab-org/build/cng/alpine-certificates
-      tag: 20191127-r2
+      # The digest below comes from a given tag pipeline because they are mirrored to .com,
+      # ensuring that the image tag is available from both instances. The digest can be
+      # found in the 'sync_images' job.
+      #   https://dev.gitlab.org/gitlab/charts/components/images/-/tags
+      tag: 20191127-r2@sha256:367d437d024d7647432d67fb2442e3e5723af5930bad77d3535f4f8f4f8630d9
       # pullPolicy: IfNotPresent
       # pullSecrets: []
     customCAs: []
@@ -651,7 +665,11 @@ global:
   kubectl:
     image:
       repository: registry.gitlab.com/gitlab-org/build/cng/kubectl
-      tag: 1.16.15
+      # The digest below comes from a given tag pipeline because they are mirrored to .com,
+      # ensuring that the image tag is available from both instances. The digest can be
+      # found in the 'sync_images' job.
+      #   https://dev.gitlab.org/gitlab/charts/components/images/-/tags
+      tag: 1.18.20@sha256:76a3052ebd64198bf99311dd2a5638dc70d2a5a99ea21dbe73264c0446849485
       # pullPolicy: IfNotPresent
       # pullSecrets: []
     securityContext:
@@ -681,8 +699,8 @@ global:
 
   ## https://docs.gitlab.com/charts/charts/globals
   extraEnv: {}
-   # SOME_KEY: some_value
-   # SOME_OTHER_KEY: some_other_value
+  #   SOME_KEY: some_value
+  #   SOME_OTHER_KEY: some_other_value
 
 ## End of global
 
@@ -808,8 +826,8 @@ prometheus:
         - job_name: prometheus
           static_configs:
             - targets:
-              - localhost:9090
-        - job_name: 'kubernetes-apiservers'
+                - localhost:9090
+        - job_name: kubernetes-apiservers
           kubernetes_sd_configs:
             - role: endpoints
           scheme: https
@@ -818,21 +836,32 @@ prometheus:
             insecure_skip_verify: true
           bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
           relabel_configs:
-            - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+            - source_labels:
+                [
+                  __meta_kubernetes_namespace,
+                  __meta_kubernetes_service_name,
+                  __meta_kubernetes_endpoint_port_name,
+                ]
               action: keep
               regex: default;kubernetes;https
-        - job_name: 'kubernetes-pods'
+        - job_name: kubernetes-pods
           kubernetes_sd_configs:
             - role: pod
           relabel_configs:
-            - source_labels: [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_scrape]
+            - source_labels:
+                [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_scrape]
               action: keep
               regex: true
-            - source_labels: [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_path]
+            - source_labels:
+                [__meta_kubernetes_pod_annotation_gitlab_com_prometheus_path]
               action: replace
               target_label: __metrics_path__
               regex: (.+)
-            - source_labels: [__address__, __meta_kubernetes_pod_annotation_gitlab_com_prometheus_port]
+            - source_labels:
+                [
+                  __address__,
+                  __meta_kubernetes_pod_annotation_gitlab_com_prometheus_port,
+                ]
               action: replace
               regex: ([^:]+)(?::\d+)?;(\d+)
               replacement: $1:$2
@@ -845,7 +874,7 @@ prometheus:
             - source_labels: [__meta_kubernetes_pod_name]
               action: replace
               target_label: kubernetes_pod_name
-        - job_name: 'kubernetes-service-endpoints'
+        - job_name: kubernetes-service-endpoints
           kubernetes_sd_configs:
             - role: endpoints
           relabel_configs:
@@ -884,14 +913,17 @@ prometheus:
               source_labels:
                 - __meta_kubernetes_pod_node_name
               target_label: kubernetes_node
-        - job_name: 'kubernetes-services'
+        - job_name: kubernetes-services
           metrics_path: /probe
           params:
             module: [http_2xx]
           kubernetes_sd_configs:
             - role: service
           relabel_configs:
-            - source_labels: [__meta_kubernetes_service_annotation_gitlab_com_prometheus_probe]
+            - source_labels:
+                [
+                  __meta_kubernetes_service_annotation_gitlab_com_prometheus_probe,
+                ]
               action: keep
               regex: true
             - source_labels: [__address__]
@@ -931,8 +963,8 @@ postgresql:
   image:
     tag: 12.7.0
   usePasswordFile: true
-  existingSecret: 'bogus'
-  initdbScriptsConfigMap: 'bogus'
+  existingSecret: bogus
+  initdbScriptsConfigMap: bogus
   master:
     extraVolumeMounts:
       - name: custom-init-scripts
@@ -951,7 +983,6 @@ postgresql:
 # registry:
 #   enabled: false
 
-
 ## Automatic shared secret generation
 ## https://docs.gitlab.com/charts/installation/secrets
 ## https://docs.gitlab.com/charts/charts/shared-secrets.html
@@ -964,7 +995,11 @@ shared-secrets:
       # pullPolicy: IfNotPresent
       # pullSecrets: []
       repository: registry.gitlab.com/gitlab-org/build/cng/cfssl-self-sign
-      tag: 1.2
+      # The digest below comes from a given tag pipeline because they are mirrored to .com,
+      # ensuring that the image tag is available from both instances. The digest can be
+      # found in the 'sync_images' job.
+      #   https://dev.gitlab.org/gitlab/charts/components/images/-/tags
+      tag: 1.6.1@sha256:e89392e13b4ef12cd48ba8c30326aacd89a8d0161cb081ac8dfbb77200d5ebac
     keyAlgorithm: "rsa"
     keySize: "4096"
     expiry: "3650d"
@@ -1026,7 +1061,7 @@ grafana:
     GF_SECURITY_ADMIN_PASSWORD: bogus
   ## This override allows gitlab/gitlab-grafana to completely override the secret
   ##   handling behavior of the upstream chart in combination with the above.
-  command: [ "sh", "-x", "/tmp/scripts/import-secret.sh" ]
+  command: ["sh", "-x", "/tmp/scripts/import-secret.sh"]
   ## The following settings allow Grafana to dynamically create
   ## dashboards and datasources from configmaps. See
   ## https://artifacthub.io/packages/helm/grafana/grafana#sidecar-for-dashboards
@@ -1068,20 +1103,26 @@ gitlab:
     replicas: 1
     antiAffinityLabels:
       matchLabels:
-        app: 'gitaly'
-## https://docs.gitlab.com/charts/charts/gitlab/migrations
-#   migrations:
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/webservice
-#   webservice:
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/sidekiq
-#   sidekiq:
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/gitaly
-#   gitaly:
-## https://docs.gitlab.com/charts/charts/gitlab/gitlab-shell
-#   gitlab-shell:
-#     enabled: false
-## https://docs.gitlab.com/charts/charts/gitlab/gitlab-grafana
-#   gitlab-grafana:
+        app: gitaly
+  ## https://docs.gitlab.com/charts/charts/gitlab/migrations
+  #   migrations:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/webservice
+  #   webservice:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/sidekiq
+  #   sidekiq:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitaly
+  #   gitaly:
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-shell
+  #   gitlab-shell:
+  #     enabled: false
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-grafana
+  #   gitlab-grafana:
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-pages
+  #   gitlab-pages:
+  ## https://docs.gitlab.com/charts/charts/gitlab/kas
+  #   kas:
+  ## https://docs.gitlab.com/charts/charts/gitlab/praefect
+  #   praefect:
