Config MailRoom to use webhook delivery method
Issue: https://gitlab.com/gitlab-com/gl-infra/scalability/-/issues/1459
Epic: https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/644

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -228,6 +228,16 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
+          name: gitlab-mailroom-imap-v2
+          namespace: {{ $namespace }}
+        stringData:
+          incoming_email_password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password") }}
+          service_desk_email_password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".service_desk_email_password") }}
+          incoming_email_auth_token: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_auth_token") }}
+          service_desk_email_auth_token: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".service_desk_email_auth_token") }}
+      - apiVersion: v1
+        kind: Secret
+        metadata:
           name: gitlab-shell-credential-v1
           namespace: {{ $namespace }}
         stringData:
